--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet"/>
         <!--Let browser know website is optimized for mobile-->
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-        <meta http-equiv="refresh" content="0;en/index.html">
+        <meta https-equiv="refresh" content="0;en/index.html">
     </head>
 
 </html>
