Mecanismos Simples de Troca de Idioma

--- a/en/projects.html
+++ b/en/projects.html
@@ -176,7 +176,7 @@
            </div>
 
            <!-- Div para apresentação do conteúdo para plataforma mobile -->
-           <div id="conteudo" class="blue-grey lighten-1 hide-on-large-only" 
+           <div id="conteudo" class="blue-grey lighten-1 hide-on-large-only"
 		style="height:3000px;
 		       background: url(img/fundo.jpg) no-repeat center center;
               	       -webkit-background-size: cover;
@@ -329,7 +329,7 @@
         <div class="footer-copyright">
 			<div class="container">
 				© 2017 Copyright
-				<a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+				<a class="grey-text text-lighten-4 right" href="../pt/projects.html">Portuguese</a>
             </div>
 		</div>
     </footer>
