--- a/en/about.html
+++ b/en/about.html
@@ -80,7 +80,7 @@
         </div>
 
 	<!-- para interfaces mobile -->
-        <div id="conteudo" class="blue-grey lighten-1 hide-on-large-only" 
+        <div id="conteudo" class="blue-grey lighten-1 hide-on-large-only"
 	     style="height: 1550px;
 		    background: url(img/fundo.jpg) no-repeat center center;
                     -webkit-background-size: cover;
@@ -145,7 +145,7 @@
         <div class="footer-copyright">
 			<div class="container">
 				© 2017 Copyright
-				<a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+				<a class="grey-text text-lighten-4 right" href="../pt/about.html">Portuguese</a>
             </div>
 		</div>
     </footer>
