--- a/pt/about.html
+++ b/pt/about.html
@@ -143,6 +143,7 @@
         <div class="footer-copyright">
 			<div class="container">
 				© 2017 Copyright
+        <a class="grey-text text-lighten-4 right" href="../en/about.html">English</a>
       </div>
 		</div>
     </footer>
