--- a/pt/contact.html
+++ b/pt/contact.html
@@ -112,6 +112,7 @@
         <div class="footer-copyright">
 			<div class="container">
 				© 2017 Copyright
+        <a class="grey-text text-lighten-4 right" href="../en/contact.html">English</a>
       </div>
 		</div>
     </footer>
