--- a/pt/projects.html
+++ b/pt/projects.html
@@ -329,6 +329,7 @@
         <div class="footer-copyright">
 			<div class="container">
 				© 2017 Copyright
+        <a class="grey-text text-lighten-4 right" href="../en/projects.html">English</a>
       </div>
 		</div>
     </footer>
