--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <body>
         
         <script language= "JavaScript">
-            location.href="en/index.html"
+            location.href="mazurco066.github.io/en/index.html"
         </script>
         
     </body>
