--- a/pt/about.html
+++ b/pt/about.html
@@ -60,7 +60,7 @@
                 <img id="foto" class="materialboxed" src="img/perfil.jpg"/>
             </div>
             <div id="artigo" class="container center-align">
-                <h3>About Me</h3>
+                <h3>Sobre</h3>
                 <article style="text-align: justify; padding:50px;">
                     Ola eu sou Gabriel Mazurco Ribeiro e sou um estudante de Analise e Desenvolvimento de Sistemas.<br>
                     Abaixo você pode consular algumas informações sobre meu perfil:
@@ -88,7 +88,7 @@
                     background-size: cover;">
 
             <br>
-            <h3 class="center-align">About Me</h3>
+            <h3 class="center-align">Sobre</h3>
 
             <div class="">
                 <img id="fotoMobile" class="materialboxed" src="img/perfil.jpg"/>
