Added Chuva Inc Projects for EN-Mobile

--- a/en/projects.html
+++ b/en/projects.html
@@ -218,7 +218,7 @@
 
            <!-- Div para apresentação do conteúdo para plataforma mobile -->
            <div id="conteudo" class="blue-grey lighten-1 hide-on-large-only"
-		style="height:3000px;
+		style="height:3750px;
 		       background: url(img/fundo.jpg) no-repeat center center;
               	       -webkit-background-size: cover;
                       -moz-background-size: cover;
@@ -335,6 +335,42 @@
                          </div>
                          <div class="card-action">
                            <a href="https://github.com/Mazurco066/IHC_Project--Syslib">GitHub Repository</a>
+                         </div>
+                       </div>
+                     </div>
+                   </div>
+		   
+		   <!-- Card número 7 -> Chuwar -->
+                  <div class="row">
+                   <div class="col s12 m7">
+                     <div class="card">
+                       <div class="card-image">
+                         <img class="materialboxed" src="img/noview.png">
+                         <span class="card-title">Chuwar</span>
+                       </div>
+                       <div class="card-content">
+                         <p>War Classic Game developed in PHP to Chuva.Inc.</p>
+                         </div>
+                         <div class="card-action">
+                           <a href="https://github.com/Mazurco066/Chuwar">GitHub Repository</a>
+                         </div>
+                       </div>
+                     </div>
+                   </div>
+				   
+		  <!-- Card número 8 -> QuebraLinha -->
+                  <div class="row">
+                   <div class="col s12 m7">
+                     <div class="card">
+                       <div class="card-image">
+                         <img class="materialboxed" src="img/noview.png">
+                         <span class="card-title">BreakLine</span>
+                       </div>
+                       <div class="card-content">
+                         <p>PHP Script that break lines of text.</p>
+                         </div>
+                         <div class="card-action">
+                           <a href="https://github.com/Mazurco066/QuebraLinha">GitHub Repository</a>
                          </div>
                        </div>
                      </div>
