--- a/en/projects.html
+++ b/en/projects.html
@@ -35,7 +35,11 @@
                 <li><a href="about.html">ABOUT</a></li>
                 <li><a href="projects.html">PROJECTS</a></li>
                 <li><a href="contact.html">CONTACT</a></li>
-                <li><a href="https://github.com/Mazurco066">GITHUB</a></li>
+                <li><a href="https://github.com/Mazurco066">
+			<div class="gitIcon">
+                    		<img src="img/Git.png" class="gitImage" />
+                  	</div>
+		    </a></li>
                 </ul>
                 <ul class="side-nav" id="mobile-demo">
                     <li><a href="index.html">HOME</a></li>
