--- a/pt/about.html
+++ b/pt/about.html
@@ -35,7 +35,11 @@
                 <li><a href="about.html">SOBRE</a></li>
                 <li><a href="projects.html">PROJETOS</a></li>
                 <li><a href="contact.html">CONTATO</a></li>
-                <li><a href="https://github.com/Mazurco066">GITHUB</a></li>
+                <li><a href="https://github.com/Mazurco066">
+			<div class="gitIcon">
+                    	<img src="img/Git.png" class="gitImage" />
+                  	</div>
+		    </a></li>
                 </ul>
                 <ul class="side-nav" id="mobile-demo">
                     <li><a href="index.html">HOME</a></li>
