Added Chuwar Image

--- a/en/projects.html
+++ b/en/projects.html
@@ -182,7 +182,7 @@
 
                         <div id="" class="card white responsive proj1">
                             <div class="card-image waves-effect waves-block waves-light">
-                                <img class="activator responsive-img" src="img/noview.png">
+                                <img class="activator responsive-img" src="img/chuwar.png">
                             </div>
                             <div class="card-content white">
                                 <span class="card-title white activator grey-text text-darken-4">Chuwar<i class="material-icons right">more_vert</i></span>
@@ -349,7 +349,7 @@
                    <div class="col s12 m7">
                      <div class="card">
                        <div class="card-image">
-                         <img class="materialboxed" src="img/noview.png">
+                         <img class="materialboxed" src="img/chuwar.png">
                          <span class="card-title">Chuwar</span>
                        </div>
                        <div class="card-content">
