--- a/en/index.html
+++ b/en/index.html
@@ -8,6 +8,7 @@
         <link rel="stylesheet" href="css/style.css"/>
         <!-- Incluindo folha de estilo web da fonte Oswald from GoogleWebFonts -->
         <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet"/>
+        <LINK REL="shortcut icon" href="img/Git.png">
         <!--Let browser know website is optimized for mobile-->
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     </head>
