Added Portuguese Language Icon

--- a/en/allProjects.html
+++ b/en/allProjects.html
@@ -411,7 +411,7 @@
         <div class="footer-copyright">
 			<div class="container">
 				© 2017 Copyright
-				<a class="grey-text text-lighten-4 right" href="../pt/allProjects.html">Portuguese</a>
+				<a class="grey-text text-lighten-4 right" href="../pt/allProjects.html"><img src="img/brazil.png" style="height: 16px; width: 16px;"/>Portuguese</a>
             </div>
 		</div>
     </footer>
