--- a/en/about.html
+++ b/en/about.html
@@ -150,7 +150,7 @@
         <div class="footer-copyright">
 			<div class="container">
 				© 2017 Copyright
-				<a class="grey-text text-lighten-4 right" href="../pt/about.html">Portuguese</a>
+				<a class="grey-text text-lighten-4 right" href="../pt/about.html"><img src="img/brazil.png" style="height: 16px; width: 16px;"/>Portuguese</a>
             </div>
 		</div>
     </footer>
