--- a/pt/about.html
+++ b/pt/about.html
@@ -148,7 +148,7 @@
         <div class="footer-copyright">
 			<div class="container">
 				© 2017 Copyright
-        <a class="grey-text text-lighten-4 right" href="../en/about.html">English</a>
+        <a class="grey-text text-lighten-4 right" href="../en/about.html"><img src="img/usa.png" style="height: 16px; width: 16px;"/> English</a>
       </div>
 		</div>
     </footer>
