--- a/pt/allProjects.html
+++ b/pt/allProjects.html
@@ -411,7 +411,7 @@
         <div class="footer-copyright">
 			<div class="container">
 				© 2017 Copyright
-        <a class="grey-text text-lighten-4 right" href="../en/allProjects.html">English</a>
+        <a class="grey-text text-lighten-4 right" href="../en/allProjects.html"><img src="img/usa.png" style="height: 16px; width: 16px;"/> English</a>
       </div>
 		</div>
     </footer>
