Added Language Icon

--- a/pt/contact.html
+++ b/pt/contact.html
@@ -117,7 +117,7 @@
         <div class="footer-copyright">
 			<div class="container">
 				© 2017 Copyright
-        <a class="grey-text text-lighten-4 right" href="../en/contact.html">English</a>
+        <a class="grey-text text-lighten-4 right" href="../en/contact.html"><img src="img/usa.png" style="height: 16px; width: 16px;"/> English</a>
       </div>
 		</div>
     </footer>
