--- a/pt/projects.html
+++ b/pt/projects.html
@@ -269,7 +269,7 @@
         <div class="footer-copyright">
 			<div class="container">
 				© 2017 Copyright
-        <a class="grey-text text-lighten-4 right" href="../en/projects.html">English</a>
+        <a class="grey-text text-lighten-4 right" href="../en/projects.html"><img src="img/usa.png" style="height: 16px; width: 16px;"/> English</a>
       </div>
 		</div>
     </footer>
