Added Google Analytics

--- a/en/projects.html
+++ b/en/projects.html
@@ -1,6 +1,17 @@
 <html lang="pt-br">
 
     <head>
+	<!-- Global Site Tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-107566552-1"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+
+	  gtag('config', 'UA-107566552-1');
+	</script>
+
+	    
         <title>Gabriel Ribeiro</title>
         <!-- Materialize.css -->
         <link rel="stylesheet" href="css/materialize.min.css"/>
