Fixed a little mess

--- a/en/allProjects.html
+++ b/en/allProjects.html
@@ -292,7 +292,7 @@
 
                         <div id="" class="card white responsive proj2">
                             <div class="card-image waves-effect waves-block waves-light">
-                                <img class="activator responsive-img" src="img/product.png">
+                                <img class="activator responsive-img" src="img/Product.png">
                             </div>
                             <div class="card-content white">
                                 <span class="card-title white activator grey-text text-darken-4">Product Sales<i class="material-icons right">more_vert</i></span>
@@ -531,7 +531,7 @@
                         <div class="col s12 m7">
                           <div class="card">
                             <div class="card-image">
-                              <img class="materialboxed" src="img/product.png">
+                              <img class="materialboxed" src="img/Product.png">
                               <span class="card-title">Product Sales</span>
                             </div>
                             <div class="card-content">
