--- a/pt/allProjects.html
+++ b/pt/allProjects.html
@@ -227,7 +227,7 @@
 			    </div>
 			    <div class="card-content white">
 				<span class="card-title white activator grey-text text-darken-4">Mazbot<i class="material-icons right">more_vert</i></span>
-				<p><a href="https://github.com/Mazurco066/Mazbot">GitHub Repository</a></p>
+				<p><a href="https://github.com/Mazurco066/Mazbot">Repositório Git</a></p>
 				</div>
 				<div class="card-reveal white">
 				    <span class="card-title grey-text text-darken-4">Mazbot<i class="material-icons right">close</i></span>
@@ -245,7 +245,7 @@
                             </div>
                             <div class="card-content white">
                                 <span class="card-title white activator grey-text text-darken-4">ERPSample<i class="material-icons right">more_vert</i></span>
-                                <p><a href="https://github.com/Mazurco066/ERPSample">GitHub Repository</a></p>
+                                <p><a href="https://github.com/Mazurco066/ERPSample">Repositório Git</a></p>
                             </div>
                             <div class="card-reveal white">
                                 <span class="card-title grey-text text-darken-4">ERPSample<i class="material-icons right">close</i></span>
@@ -473,7 +473,7 @@
                               <p>Sr. Shadow Discord bot developed for "RaktaShadow" server.</p>
                               </div>
                               <div class="card-action">
-                                <a href="https://github.com/Mazurco066/Mazbot">GitHub Repository</a>
+                                <a href="https://github.com/Mazurco066/Mazbot">Repositório Git</a>
                               </div>
                             </div>
                           </div>
@@ -491,7 +491,7 @@
                               <p>Simple ERP Layout developed in java using JFrame and mySQL Database.</p>
                               </div>
                               <div class="card-action">
-                                <a href="https://github.com/Mazurco066/ERPSample">GitHub Repository</a>
+                                <a href="https://github.com/Mazurco066/ERPSample">Repositório Git</a>
                               </div>
                             </div>
                           </div>
