--- a/pt/index.html
+++ b/pt/index.html
@@ -2,13 +2,10 @@
 
     <head>
         <title>Gabriel Ribeiro</title>
-        <!-- Materialize.css -->
-        <link rel="stylesheet" href="css/materialize.min.css"/>
         <!-- Minha css custom -->
-        <link rel="stylesheet" href="css/style.css"/>
-        <!-- Incluindo folha de estilo web da fonte Oswald from GoogleWebFonts -->
-        <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet"/>
-        <LINK REL="shortcut icon" href="img/Git.png">
+        <link rel="stylesheet" href="../css/style.css"/>
+        <!-- Latest compiled and minified CSS -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
         <!--Let browser know website is optimized for mobile-->
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <meta charset="utf-8">
@@ -16,90 +13,12 @@
 
     <body>
         <!-- Jquery.js -->
-        <script src="js/jquery-3.2.1.js"></script>
-        <!-- Materialize.js (javascript) -->
-        <script src="js/materialize.min.js"></script>
+        <script src="../js/jquery-3.2.1.js"></script>
         <!--Import Google Icon Font-->
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-
-        <!-- Barra de Navegação do Site -->
-        <nav>
-            <div class="nav-wrapper grey darken-4">
-                <a href="" class="brand-logo">
-                    <img id="logotipo" src="img/logo.png" class="responsive-img"/>
-                </a>
-                <a href="#" data-activates="mobile-demo" class="button-collapse">
-                    <i class="material-icons">menu</i>
-                </a>
-                <ul id="nav-mobile" class="right hide-on-med-and-down">
-                <li><a href="index.html">HOME</a></li>
-                <li><a href="about.html">SOBRE</a></li>
-                <li><a href="projects.html">PROJETOS</a></li>
-                <li><a href="contact.html">CONTATO</a></li>
-                <li><a href="https://github.com/Mazurco066">
-                    <div class="gitIcon">
-                        <img src="img/Git.png" class="gitImage" />
-                    </div>
-                    </a></li>
-                </ul>
-                <ul class="side-nav" id="mobile-demo">
-                    <li><a href="index.html">HOME</a></li>
-                    <li><a href="about.html">SOBRE</a></li>
-                    <li><a href="projects.html">PROJETOS</a></li>
-                    <li><a href="contact.html">CONTATO</a></li>
-                    <li><a href="https://github.com/Mazurco066">GITHUB</a></li>
-                </ul>
-            </div>
-        </nav>
-
-    <!-- Painel Javascript -->
-    <div id="deslizar" class="slider fullscreen">
-        <ul class="slides">
-            <li>
-                <img src="img/teclado.jpg"> <!-- selected image -->
-                <div class="caption center-align">
-                    <h3>Ola eu sou Gabriel Mazurco Ribeiro!</h3>
-                    <img id="profile" class="circle" src="img/profile.jpg"/>
-                    <h5 class="light grey-text text-lighten-3">Seja Bem Vindo a Meu portifólio GitHub!</h5>
-                </div>
-            </li>
-            <li>
-                <img src="img/coding.jpg"> <!-- selected image -->
-                <div class="caption left-align">
-                    <h3>Nesta Página</h3>
-                    <h5 class="light grey-text text-lighten-3">você pode encontrar algumas informações sobre mim.</h5>
-                </div>
-            </li>
-            <li>
-                <img src="img/laptop.jpg"> <!-- selected image -->
-                <div class="caption right-align">
-                    <h3>Projetos</h3>
-                    <h5 class="light grey-text text-lighten-3">Cada projeto em meu github tem uma descrição neste posrifólio também, Veja a aba Projetos para detalhes</h5>
-                </div>
-            </li>
-            <li>
-                <img src="img/tunel.jpg"> <!-- random image -->
-                <div class="caption center-align">
-                    <h3>Creditos</h3>
-                    <h5 class="light grey-text text-lighten-3">WebSite por Mazurco066(Gabriel Ribeiro), Feito com o uso do Materialize Framework.</h5>
-                </div>
-            </li>
-        </ul>
-    </div>
-
-    <!-- Para o funcionamento da nav-bar responsiva -->
-    <script>
-        $( document ).ready(function(){
-            $(".button-collapse").sideNav();
-        });
-    </script>
-    <!-- Para o funcionamento do Carousel Slider Central -->
-    <script>
-        $(document).ready(function(){
-            $('.slider').slider();
-        });
-    </script>
-
+        <div class="container">
+            <h1 class="">Site sob Atualização</h1>
+            <h2>Por favor volte mais tarde</h2>
+        </div>  
     </body>
-
 </html>
