Adição da nova página home

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <body>
         <!-- Redirect de emergencia caso o meta não funcionar -->
         <script language= "JavaScript">
-            location.href="en/index.html"
+            location.href="pt/index.html"
         </script>        
     </body>
 </html>
