--- a/pt/index.html
+++ b/pt/index.html
@@ -1,24 +1,194 @@
+<!DOCTYPE html>
 <html lang="pt-br">
+    <head>       
 
-    <head>
-        <title>Gabriel Ribeiro</title>
-        <!-- Minha css custom -->
-        <link rel="stylesheet" href="../css/style.css"/>
-        <!-- Latest compiled and minified CSS -->
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-        <!--Let browser know website is optimized for mobile-->
-        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+        <!-- Default Definitions -->
         <meta charset="utf-8">
-    </head>
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
 
+        <!-- Page Title -->
+        <title>Gabriel Mazurco</title>
+
+        <!-- Custom Css -->
+        <link rel="stylesheet" type="text/css" href="../css/style.css">
+
+        <!-- Bootstrap -->
+        <link href="../css/bootstrap.min.css" rel="stylesheet">
+
+        <!-- Font Awesome -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+           
+    </head>
     <body>
-        <!-- Jquery.js -->
-        <script src="../js/jquery-3.2.1.js"></script>
-        <!--Import Google Icon Font-->
-        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+        <!-- Page Header -->
+        <header>
+            <div class="container">
+
+                <div class="row no-gutters">
+                    <div class="col-lg-4 col-md-4">
+                        <img src="../images/me.png" /> 
+                    </div>
+                    <div class="col-lg-8 col-md-8">
+
+                        <!-- Name and Url's -->
+                        <div class="d-flex flex-column">
+                            <div class="p-5 bg-dark text-white">
+                                <div class="d-flex flex-row justify-content-between align-items-sm-center">
+                                    <h1 class="display-4">Gabriel Mazurco</h1>
+                                    <div><i class="fa fa-facebook"></i></div>
+                                    <div><i class="fa fa-google-plus"></i></div>
+                                    <div><i class="fa fa-linkedin"></i></div>
+                                    <div><i class="fa fa-github"></i></div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- Description -->
+                        <div class="p-3 text-white bg-black">
+                            Desenvolvedor Web e Mobile
+                        </div>
+
+                        <!-- Navigation -->
+                        <div class="d-flex flex-row text-center text-white">
+
+                            <div class="p-4 bg-success font-div" 
+                                 data-toggle="collapse" data-target="#home">
+                                <i class="fa fa-home fa-2x d-block"></i> Home
+                            </div>
+
+                            <div class="p-4 bg-danger font-div">
+                                <i class="fa fa-graduation-cap fa-2x d-block"></i> Formação
+                            </div>
+
+                            <div class="p-4 bg-primary font-div">
+                                <i class="fa fa-folder fa-2x d-block"></i> Experiência
+                            </div>
+
+                            <div class="p-4 bg-warning font-div">
+                                <i class="fa fa-envelope fa-2x d-block"></i> Contato
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </header>
+
         <div class="container">
-            <h1 class="">Site sob Atualização</h1>
-            <h2>Por favor volte mais tarde</h2>
-        </div>  
+            <div class="collapse" id="home">
+
+                <!-- Home Header -->
+                <div class="p-5 text-white bg-success">
+                    <h2>Objetivos</h2>
+                    <p>Trabalhar na área de TI em desenvolvimento de sistemas e aplicações como Junior ou Trainee.</p>
+                </div>
+
+                <!-- Skill List -->
+                <div class="card card-body">
+                    <h2>Minhas Habilidades</h2>
+                    <p>Uma lista com minhas habilidades mais destacadas:</p>
+                    <hr />
+
+                    <!-- Skill 01 - Java -->
+                    <h4> Java </h4>
+                    <div class="progress mb-3">
+                        <div class="progress-bar progress-bar-striped progress-bar-animated" style="width: 95%"></div>
+                    </div>
+
+                    <!-- Skill 02 - C# -->
+                    <h4> C# </h4>
+                    <div class="progress mb-3">
+                        <div class="progress-bar progress-bar-striped progress-bar-animated" style="width: 85%"></div>
+                    </div>
+
+                    <!-- Skill 03- HTML -->
+                    <h4> HTML </h4>
+                    <div class="progress mb-3">
+                        <div class="progress-bar progress-bar-striped progress-bar-animated" style="width: 80%"></div>
+                    </div>
+
+                    <!-- Skill 04 - Javascript -->
+                    <h4> Javascript </h4>
+                    <div class="progress mb-3">
+                        <div class="progress-bar progress-bar-striped progress-bar-animated" style="width: 75%"></div>
+                    </div>
+
+                    <!-- Skill 05 - CSS -->
+                    <h4> CSS </h4>
+                    <div class="progress mb-3">
+                        <div class="progress-bar progress-bar-striped progress-bar-animated" style="width: 70%"></div>
+                    </div>
+
+                    <hr />
+                    
+                    <!-- Skill 06 - UI Design -->
+                    <h4> UI Design </h4>
+                    <div class="progress mb-3">
+                        <div class="progress-bar progress-bar-striped progress-bar-animated" style="width: 40%"></div>
+                    </div>
+
+                    <!-- Skill 07 - Bootstrap -->
+                    <h4> Bootstrap </h4>
+                    <div class="progress mb-3">
+                        <div class="progress-bar progress-bar-striped progress-bar-animated" style="width: 70%"></div>
+                    </div>
+
+                    <!-- Skill 09 - React -->
+                    <h4> React </h4>
+                    <div class="progress mb-3">
+                        <div class="progress-bar progress-bar-striped progress-bar-animated" style="width: 80%"></div>
+                    </div>
+
+                    <!-- Skill 10 - Backend -->
+                    <h4> Backend </h4>
+                    <div class="progress mb-3">
+                        <div class="progress-bar progress-bar-striped progress-bar-animated" style="width: 87%"></div>
+                    </div>
+
+                    <!-- Skill 11- Android -->
+                    <h4> Android </h4>
+                    <div class="progress mb-3">
+                        <div class="progress-bar progress-bar-striped progress-bar-animated" style="width: 100%"></div>
+                    </div>
+
+                    <hr />
+
+                    <!-- Skill 12 - MySQL -->
+                    <h4> MySQL Database </h4>
+                    <div class="progress mb-3">
+                        <div class="progress-bar progress-bar-striped progress-bar-animated" style="width: 90%"></div>
+                    </div>
+
+                    <!-- Skill 13 - Firebase -->
+                    <h4> Firebase </h4>
+                    <div class="progress mb-3">
+                        <div class="progress-bar progress-bar-striped progress-bar-animated" style="width: 85%"></div>
+                    </div>
+
+                    <!-- Skill 14 - MongoDB -->
+                    <h4> MongoDB </h4>
+                    <div class="progress mb-3">
+                        <div class="progress-bar progress-bar-striped progress-bar-animated" style="width: 60%"></div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+
+        <!-- Page Footer -->
+        <div class="container">
+            <footer class="p-5 bg-dark text-center text-white">
+                Feito com <i class="fa fa-heart"></i> por
+                <p class="d-block">Gabriel Mazurco Ribeiro @2018</p>
+                <p class="d-block">Obrigado <i class="fa fa-github"></i> pela hospedagem</p>
+            </footer>
+        </div>
+
+        <!-- JavaScript -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script> 
     </body>
 </html>
