Correção de Navegação

--- a/pt/index.html
+++ b/pt/index.html
@@ -53,22 +53,22 @@
                         <!-- Navigation -->
                         <div class="d-flex flex-row text-center text-white">
 
-                            <div class="p-4 bg-success font-div" 
+                            <a class="p-4 bg-success font-div" 
                                  data-toggle="collapse" data-target="#home">
                                 <i class="fa fa-home fa-2x d-block"></i> Home
-                            </div>
+                            </a>
 
-                            <div class="p-4 bg-danger font-div">
+                            <a class="p-4 bg-danger font-div">
                                 <i class="fa fa-graduation-cap fa-2x d-block"></i> Formação
-                            </div>
+                            </a>
 
-                            <div class="p-4 bg-primary font-div">
+                            <a class="p-4 bg-primary font-div">
                                 <i class="fa fa-folder fa-2x d-block"></i> Experiência
-                            </div>
+                            </a>
 
-                            <div class="p-4 bg-warning font-div">
+                            <a class="p-4 bg-warning font-div">
                                 <i class="fa fa-envelope fa-2x d-block"></i> Contato
-                            </div>
+                            </a>
 
                         </div>
                     </div>
