--- a/en/index.html
+++ b/en/index.html
@@ -53,22 +53,22 @@
                         <!-- Navigation -->
                         <div class="d-flex flex-row text-center text-white">
 
-                            <div class="p-4 bg-success font-div" 
-                                 data-toggle="collapse" data-target="#home">
-                                <i class="fa fa-home fa-2x d-block"></i> Home
-                            </div>
+                            <a class="p-4 bg-success font-div" 
+                                data-toggle="collapse" data-target="#home">
+                               <i class="fa fa-home fa-2x d-block"></i> Home
+                           </a>
 
-                            <div class="p-4 bg-danger font-div">
-                                <i class="fa fa-graduation-cap fa-2x d-block"></i> Resume
-                            </div>
+                           <a class="p-4 bg-danger font-div">
+                               <i class="fa fa-graduation-cap fa-2x d-block"></i> Resume
+                           </a>
 
-                            <div class="p-4 bg-primary font-div">
-                                <i class="fa fa-folder fa-2x d-block"></i> Work
-                            </div>
+                           <a class="p-4 bg-primary font-div">
+                               <i class="fa fa-folder fa-2x d-block"></i> Work
+                           </a>
 
-                            <div class="p-4 bg-warning font-div">
-                                <i class="fa fa-envelope fa-2x d-block"></i> Contact
-                            </div>
+                           <a class="p-4 bg-warning font-div">
+                               <i class="fa fa-envelope fa-2x d-block"></i> Contact
+                           </a>
 
                         </div>
                     </div>
