Adição da página de graduação

--- a/pt/index.html
+++ b/pt/index.html
@@ -58,7 +58,8 @@
                                 <i class="fa fa-home fa-2x d-block"></i> Home
                             </a>
 
-                            <a class="p-4 bg-danger font-div">
+                            <a class="p-4 bg-danger font-div"
+                               data-toggle="collapse" data-target="#resume">
                                 <i class="fa fa-graduation-cap fa-2x d-block"></i> Formação
                             </a>
 
@@ -77,6 +78,8 @@
         </header>
 
         <div class="container">
+
+            <!-- Home Page -->
             <div class="collapse" id="home">
 
                 <!-- Home Header -->
@@ -93,31 +96,31 @@
 
                     <!-- Skill 01 - Java -->
                     <h4> Java </h4>
-                    <div class="progress mb-3">
+                    <div class="progress mb-4">
                         <div class="progress-bar progress-bar-striped progress-bar-animated" style="width: 95%"></div>
                     </div>
 
                     <!-- Skill 02 - C# -->
                     <h4> C# </h4>
-                    <div class="progress mb-3">
+                    <div class="progress mb-4">
                         <div class="progress-bar progress-bar-striped progress-bar-animated" style="width: 85%"></div>
                     </div>
 
                     <!-- Skill 03- HTML -->
                     <h4> HTML </h4>
-                    <div class="progress mb-3">
+                    <div class="progress mb-4">
                         <div class="progress-bar progress-bar-striped progress-bar-animated" style="width: 80%"></div>
                     </div>
 
                     <!-- Skill 04 - Javascript -->
                     <h4> Javascript </h4>
-                    <div class="progress mb-3">
+                    <div class="progress mb-4">
                         <div class="progress-bar progress-bar-striped progress-bar-animated" style="width: 75%"></div>
                     </div>
 
                     <!-- Skill 05 - CSS -->
                     <h4> CSS </h4>
-                    <div class="progress mb-3">
+                    <div class="progress mb-4">
                         <div class="progress-bar progress-bar-striped progress-bar-animated" style="width: 70%"></div>
                     </div>
 
@@ -125,31 +128,31 @@
                     
                     <!-- Skill 06 - UI Design -->
                     <h4> UI Design </h4>
-                    <div class="progress mb-3">
+                    <div class="progress mb-4">
                         <div class="progress-bar progress-bar-striped progress-bar-animated" style="width: 40%"></div>
                     </div>
 
                     <!-- Skill 07 - Bootstrap -->
                     <h4> Bootstrap </h4>
-                    <div class="progress mb-3">
+                    <div class="progress mb-4">
                         <div class="progress-bar progress-bar-striped progress-bar-animated" style="width: 70%"></div>
                     </div>
 
                     <!-- Skill 09 - React -->
                     <h4> React </h4>
-                    <div class="progress mb-3">
+                    <div class="progress mb-4">
                         <div class="progress-bar progress-bar-striped progress-bar-animated" style="width: 80%"></div>
                     </div>
 
                     <!-- Skill 10 - Backend -->
                     <h4> Backend </h4>
-                    <div class="progress mb-3">
+                    <div class="progress mb-4">
                         <div class="progress-bar progress-bar-striped progress-bar-animated" style="width: 87%"></div>
                     </div>
 
                     <!-- Skill 11- Android -->
                     <h4> Android </h4>
-                    <div class="progress mb-3">
+                    <div class="progress mb-4">
                         <div class="progress-bar progress-bar-striped progress-bar-animated" style="width: 100%"></div>
                     </div>
 
@@ -157,24 +160,101 @@
 
                     <!-- Skill 12 - MySQL -->
                     <h4> MySQL Database </h4>
-                    <div class="progress mb-3">
+                    <div class="progress mb-4">
                         <div class="progress-bar progress-bar-striped progress-bar-animated" style="width: 90%"></div>
                     </div>
 
                     <!-- Skill 13 - Firebase -->
                     <h4> Firebase </h4>
-                    <div class="progress mb-3">
+                    <div class="progress mb-4">
                         <div class="progress-bar progress-bar-striped progress-bar-animated" style="width: 85%"></div>
                     </div>
 
                     <!-- Skill 14 - MongoDB -->
                     <h4> MongoDB </h4>
-                    <div class="progress mb-3">
+                    <div class="progress mb-4">
                         <div class="progress-bar progress-bar-striped progress-bar-animated" style="width: 60%"></div>
                     </div>
 
                 </div>
             </div>
+
+            <!-- Resume Page -->
+            <div class="collapse" id="resume">
+                
+                <!-- Resume Header -->
+                <div class="p-5 text-white bg-danger">
+                    <h2>Minha Formação</h2>
+                    <p>Tecnólogo em Análise e Desenvolvimento de Sistemas.</p>   
+                </div>
+
+                <!-- Resume Content -->
+                <div class="card card-body">
+                    <h2>Onde eu me Formei?</h2>
+                    <p>Nesta secção será apresentada minha formação acadêmica:</p>
+
+                    <!-- Deck 01 - Academic -->
+                    <div class="card-deck text-center mb-4">
+
+                        <!-- Card 01 - ETEC -->
+                        <div class="card">
+                            <div class="card-header text-uppercase font-weight-bold">
+                                Ensino Médio
+                            </div>
+                            <div class="card-body">
+                                <p class="mb-5">Curso de Ensino Médio Regular</p>
+                                <p class="bg-dark text-white p-2"> ETEC "Pedro Ferreira Alves" </p>
+                                <p class="bg-dark text-white p-2"> Mogi Mirim - SP </p>
+                            </div>
+                            <div class="card-footer">
+                                De: 2013 à 2015
+                            </div>
+                        </div>
+
+                        <!-- Card 02 - FATEC -->
+                        <div class="card">
+                            <div class="card-header text-uppercase font-weight-bold">
+                                Análise e Desenvolvimento de Sistemas
+                            </div>
+                            <div class="card-body">
+                                <p class="mb-5">Curso Superior de Tecnologia em Análise e Desenvolvimento de Sistemas. (Em curso, período da noite- previsão de término em 2018)</p>
+                                <p class="bg-dark text-white p-2"> FATEC "Arthur de Azevedo" </p>
+                                <p class="bg-dark text-white p-2"> Mogi Mirim - SP </p>
+                            </div>
+                            <div class="card-footer">
+                                De: 2016 à 2018
+                            </div>
+                        </div>
+
+                    </div>
+
+                    <h2>Onde eu Trabalhei?</h2>
+                    <p>Nesta secção será apresentada minhas experiências como profissional contratado:</p>
+
+                    <!-- Deck 02 - Professional -->
+                    <div class="card-deck text-center mb-4">
+
+                            <!-- Card 03 - Estágio Prefeitura -->
+                            <div class="card">
+                                <div class="card-header text-uppercase font-weight-bold">
+                                    Estagiário em Suporte Técnico
+                                </div>
+                                <div class="card-body">
+                                    <p class="mb-5">Manutenção de Hardware, Software e Rede, Instalação e configuração de computadores, Execução de chamados. </p>
+                                    <p class="bg-dark text-white p-2"> Prefeitura Municipal de Mogi Guaçu </p>
+                                    <p class="bg-dark text-white p-2"> Mogi Guaçu - SP </p>
+                                </div>
+                                <div class="card-footer">
+                                    De: Maio/2018 - O Momento
+                                </div>
+                            </div>
+
+                    </div>
+
+                </div>
+
+            </div>
+
         </div>
 
         <!-- Page Footer -->
