Adição da página de projetos

--- a/pt/index.html
+++ b/pt/index.html
@@ -28,7 +28,7 @@
 
                 <div class="row no-gutters">
                     <div class="col-lg-4 col-md-4">
-                        <img src="../images/me.png" /> 
+                        <img class="img-profile" src="../images/me.png" /> 
                     </div>
                     <div class="col-lg-8 col-md-8">
 
@@ -63,8 +63,9 @@
                                 <i class="fa fa-graduation-cap fa-2x d-block"></i> Formação
                             </a>
 
-                            <a class="p-4 bg-primary font-div">
-                                <i class="fa fa-folder fa-2x d-block"></i> Experiência
+                            <a class="p-4 bg-primary font-div"
+                               data-toggle="collapse" data-target="#projects">
+                                <i class="fa fa-folder fa-2x d-block"></i> Projetos
                             </a>
 
                             <a class="p-4 bg-warning font-div">
@@ -192,6 +193,7 @@
                 <div class="card card-body">
                     <h2>Onde eu me Formei?</h2>
                     <p>Nesta secção será apresentada minha formação acadêmica:</p>
+                    <hr />
 
                     <!-- Deck 01 - Academic -->
                     <div class="card-deck text-center mb-4">
@@ -250,6 +252,43 @@
                             </div>
 
                     </div>
+
+                </div>
+
+            </div>
+
+            <!-- Projects Page -->
+            <div class="collapse" id="projects">
+
+                <!-- Projects Header -->
+                <div class="p-5 text-white bg-primary">
+                    <h2>Meus Projetos</h2>
+                    <p>Projetos desenvolvidos por mim.</p>   
+                </div>
+
+                <!-- Projects Content -->
+                <div class="card card-body">
+                    <h2>Principais Projetos</h2>
+                    <p>Nesta secção serão apresentados projetos desenvolvidos por mim e armazenados em repositórios no github:</p>
+                    <hr />
+
+                    <div class="row">
+                        <div class="col-lg-4 col-md-4 mt-3"><img src="../images/proj01.png" /></div>
+                        <div class="col-lg-4 col-md-4 mt-3"><img src="../images/proj02.png" /></div>
+                        <div class="col-lg-4 col-md-4 mt-3"><img src="../images/proj03.png" /></div>
+                        <div class="col-lg-4 col-md-4 mt-3"><img src="../images/proj04.png" /></div>
+                        <div class="col-lg-4 col-md-4 mt-3"><img src="../images/proj05.png" /></div>
+                        <div class="col-lg-4 col-md-4 mt-3"><img src="../images/proj06.png" /></div>
+                    </div>
+
+                    <div class="text-center mt-4">
+                        <a href="https://github.com/Mazurco066?tab=repositories">
+                            <button class="btn btn-primary" > 
+                                <i class="fa fa-github fa-2x"></i> Ver Todos Projetos 
+                            </button>
+                        </a>
+                    </div>
+                   
 
                 </div>
 
