Correção de link na página de projetos

--- a/en/index.html
+++ b/en/index.html
@@ -63,7 +63,8 @@
                                <i class="fa fa-graduation-cap fa-2x d-block"></i> Resume
                            </a>
 
-                           <a class="p-4 bg-primary font-div">
+                           <a class="p-4 bg-primary font-div"
+                              data-toggle="collapse" data-target="#projects">
                                <i class="fa fa-folder fa-2x d-block"></i> Work
                            </a>
 
