--- a/pt/index.html
+++ b/pt/index.html
@@ -68,7 +68,8 @@
                                 <i class="fa fa-folder fa-2x d-block"></i> Projetos
                             </a>
 
-                            <a class="p-4 bg-warning font-div">
+                            <a class="p-4 bg-warning font-div"
+                               data-toggle="collapse" data-target="#contact">
                                 <i class="fa fa-envelope fa-2x d-block"></i> Contato
                             </a>
 
@@ -294,6 +295,59 @@
 
             </div>
 
+            <!-- Contact Page -->
+            <div class="collapse" id="contact">
+
+                <!-- Contact Header -->
+                <div class="p-5 text-white bg-warning">
+                    <h2>Contato por E-mail</h2>
+                    <p>Atualmente o portifólio não contata por E-mail pois não possuo domínio próprio.</p>
+                </div>
+
+                <!-- Contact Content -->
+                <div class="card card-body">
+                    <div class="row justify-content-center">
+                        <div class="col-lg-8 col-md-8 col-12">
+                            <form>
+
+                                <!-- Name Input -->
+                                <div class="form-group">
+                                    <div class="input-group input-group-lg">
+                                        <span class="input-group-addon bg-warning text-white p-3">
+                                            <i class="fa fa-user"></i> </span>
+                                        <input class="form-control bg-dark text-white" type="text" 
+                                        name="name" placeholder="Nome" />
+                                    </div>
+                                </div>
+
+                                <!-- E-mail Input -->
+                                <div class="form-group">
+                                    <div class="input-group input-group-lg">
+                                        <span class="input-group-addon bg-warning text-white p-3">
+                                            <i class="fa fa-envelope"></i> </span>
+                                        <input class="form-control bg-dark text-white" type="text" name="email" placeholder="E-mail" />
+                                    </div>
+                                </div>
+                                
+                                <!-- Message Input -->
+                                <div class="form-group">
+                                    <div class="input-group input-group-lg">
+                                        <span class="input-group-addon bg-warning text-white p-3">
+                                            <i class="fa fa-envelope"></i> </span>
+                                        <input class="form-control bg-dark text-white" type="text" name="message" placeholder="Mensagem" />
+                                    </div>
+                                </div>
+
+                                <!-- Submit -->
+                                <input type="submit" class="btn btn-danger" value="Enviar" />
+
+                            </form>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+
         </div>
 
         <!-- Page Footer -->
@@ -308,6 +362,11 @@
         <!-- JavaScript -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script> 
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+        <script type="text/javascript">
+            $('.font-div').click(function(){
+                $('.collapse').collapse('hide');
+            });
+        </script>
     </body>
 </html>
