--- a/pt/index.html
+++ b/pt/index.html
@@ -37,10 +37,10 @@
                             <div class="p-5 bg-dark text-white">
                                 <div class="d-flex flex-row justify-content-between align-items-sm-center">
                                     <h1 class="display-4">Gabriel Mazurco</h1>
-                                    <div><i class="fa fa-facebook"></i></div>
-                                    <div><i class="fa fa-google-plus"></i></div>
-                                    <div><i class="fa fa-linkedin"></i></div>
-                                    <div><i class="fa fa-github"></i></div>
+                                    <div><a href="https://www.facebook.com/gabriel.ribeiro.7921"><i class="fa fa-facebook"></i></a></div>
+                                    <div><a href="https://plus.google.com/112951067621195078658"><i class="fa fa-google-plus"></i></a></div>
+                                    <div><a href="https://www.linkedin.com/in/mazurco066/"><i class="fa fa-linkedin"></i></a></div>
+                                    <div><a href="https://github.com/Mazurco066"><i class="fa fa-github"></i></a></div>
                                 </div>
                             </div>
                         </div>
