--- a/pt/index.html
+++ b/pt/index.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-    <head>       
+    <head>
+        
+        <!-- Global Site Tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-107566552-1"></script>
+        <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+
+          gtag('config', 'UA-107566552-1');
+        </script>
 
         <!-- Default Definitions -->
         <meta charset="utf-8">
