--- a/en/index.html
+++ b/en/index.html
@@ -257,9 +257,24 @@
                                 <p class="bg-dark text-white p-2"> Mogi Guaçu - SP </p>
                             </div>
                             <div class="card-footer">
-                                Dates: May/2018 - Now
+                                Dates: May/2018 - Dec/2018
                             </div>
                         </div>
+
+                        <!-- Card 03 - Dev Frontend -->
+                    <div class="card">
+                        <div class="card-header text-uppercase font-weight-bold">
+                            Frontend Developer
+                        </div>
+                        <div class="card-body">
+                            <p class="mb-5">UX and templates development into Magento for Online Stores and Marketplaces. </p>
+                            <p class="bg-dark text-white p-2"> WideCommerce </p>
+                            <p class="bg-dark text-white p-2"> Mogi Guaçu - SP </p>
+                        </div>
+                        <div class="card-footer">
+                            De: March/2019 - Now
+                        </div>
+                    </div>
             
                     </div>
             
