--- a/pt/index.html
+++ b/pt/index.html
@@ -258,10 +258,25 @@
                                     <p class="bg-dark text-white p-2"> Mogi Guaçu - SP </p>
                                 </div>
                                 <div class="card-footer">
-                                    De: Maio/2018 - O Momento
+                                    De: Maio/2018 - Dezembro/2018
                                 </div>
                             </div>
 
+                    </div>
+
+                    <!-- Card 03 - Dev Frontend -->
+                    <div class="card">
+                        <div class="card-header text-uppercase font-weight-bold">
+                            Desenvolvedor Frontend
+                        </div>
+                        <div class="card-body">
+                            <p class="mb-5">Desenvolvimento de UX e Templates no Magento para lojas virtuais e marketplaces. </p>
+                            <p class="bg-dark text-white p-2"> WideCommerce </p>
+                            <p class="bg-dark text-white p-2"> Mogi Guaçu - SP </p>
+                        </div>
+                        <div class="card-footer">
+                            De: Março/2019 - O Momento
+                        </div>
                     </div>
 
                 </div>
